# mdestimator

./: .gitignore  CMakeLists.txt  CircularBuffer.h  CircularQueue.h  MovingCounter.h  README.md  SendSideBandwidthEstimation.cpp  SendSideBandwidthEstimation.h  WrapExtender.h  mdestimator.cpp
mdestimator/: mdestimator.h
